--- a/PontoInteligente/src/main/resources/application.properties
+++ b/PontoInteligente/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+# MySQL
+spring.datasource.url=jdbc:mysql://localhost:3307/ponto-inteligente
+spring.datasource.username=root
+spring.datasource.password=jamal2012
+spring.jpa.hibernate.ddl-auto=update
 
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+# Exibe os comandos executados SQL
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=trace
