--- a/PontoInteligente/src/main/resources/application.properties
+++ b/PontoInteligente/src/main/resources/application.properties
@@ -1,15 +1,21 @@
+spring.profiles.active=dev
+
 # MySQL
-spring.datasource.url=jdbc:mysql://localhost:3307/ponto-inteligente
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3307/ponto-inteligente?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=jamal2012
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=admin
 
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-
-# Exibe os comandos executados SQL
+# exibe os comandos SQL
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
+
+#paginacao
+paginacao.qtd_por_pagina=25
+
+# JWT
+jwt.secret=_@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
+# token com duração de 7 dias
+jwt.expiration=604800
